--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "Victor Gyoshev",
   "license": "MIT",
   "dependencies": {
-    "bookshelf": "^0.10.3",
-    "express": "^4.15.2",
-    "knex": "^0.13.0",
-    "pg": "^6.1.5",
-    "socket.io": "^1.7.3"
+    "bookshelf": "^1.0.1",
+    "express": "^4.17.1",
+    "knex": "^0.19.5",
+    "npm": "^6.12.0",
+    "pg": "^7.12.1",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0"
   },
   "bugs": {
     "url": "https://github.com/Catishere/Club-Cat/issues"
