--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "type": "git",
     "url": "git+https://github.com/Catishere/Club-Cat.git"
   },
+  "engines": {
+    "node": ">=4.3 <7.0",
+    "npm": ">=1.0.0"
+  },
   "author": "Victor Gyoshev",
   "license": "MIT",
   "dependencies": {
